--- a/.github/workflows/getrdp.yml
+++ b/.github/workflows/getrdp.yml
@@ -23,7 +23,7 @@ jobs:
     - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
     - name: Install goodies
       run: Invoke-WebRequest https://ninite.com/discord-notepadplusplus-winrar/ninite.exe -OutFile goodies.exe
-      run: .\goodies.exe
+    - run: .\goodies.exe
     - name: Create Tunnel
       run: .\ngrok\ngrok.exe tcp 3389
       
